public/stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

/* --- CSS VARIABLES --- */
/* https://developer.mozilla.org/en-US/docs/Web/CSS/var */
:root {
  --text-color: white;
}

#home,
#login,
#signup {
  background-image: url("/images/login.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
}

.logo {
  width: 300px;
  height: auto;
  margin-bottom: 40px;
}
.Layer_1 {
  background: linear-gradient(180deg, rgba(21, 66, 85, 0) 28.94%, #154255 50%);
}

.Layer_2 {
  background: linear-gradient(180deg, #ff0066 50%, rgba(255, 0, 102, 0) 72.35%);
}
body {
  background-color: black;
  color: white;
  font: 14px "Roboto", "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: var(--text-color);
  text-decoration: none;
}
button:focus {
  outline: 0;
}
h1 {
  font-style: normal;
  font-weight: 500;
  font-size: 36px;
  margin-left: 25px;
}
h2 {
  font-style: normal;
  font-weight: 500;
  font-size: 24px;
}
h3 {
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 24px;
}
/* --CALENDAR / CLASSES STYLING------------------------------------- */
.header-calendar {
  height: 90px;
  background-color: black;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid #666666;
  position: fixed;
  top: 0;
  width: 100vw;
}
.calendarbar {
  display: flex;
}
.resultsSpan {
  width: 20px;
  font-style: normal;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  color: black;
  background-color: #ff0066;
  border-radius: 20px;
  border: none;
}

.datebox {
  display: flex;
  flex-direction: column;
  width: 50px;
}
.daysBtnOn {
  width: 40px;
  height: 40px;
  font-style: normal;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  color: black;
  background-color: #ff0066;
  border-radius: 20px;
  border: none;
  z-index: 1;
}
.daysBtnOff {
  width: 40px;
  height: 40px;
  font-style: normal;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  color: #e5e5e5;
  background-color: black;
  border-radius: 20px;
  border: none;
  z-index: 0;
}
.day,
.month {
  padding: 5px;
  text-align: center;
}
.classname {
  font-weight: 700;
}
.btn-container {
  width: 100vw;
  position: fixed;
  bottom: 100px;
  margin-left: 0 auto;
  display: flex;
  justify-content: center;
}
.btn-container button {
  font-weight: 900;
  font-size: 14px;
  text-transform: uppercase;
  width: 164px;
  height: 60px;
  background: #c4c4c4;
  border-radius: 60px;
  border: none;
}

/* LOGIN FORM AND SOIGNUP FORM */
.loginDiv,
.signupDiv {
  margin-bottom: 1px;
  height: 50vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.loginBtnsDiv {
  width: 100vw;
  position: fixed;
  bottom: 100px;
  margin-left: 0 auto;
  display: flex;
  justify-content: space-around;
}
.loginBtnsDiv-1 {
  border: 0px;
  padding: 0px;
  margin: 0px;
  align-self: center;
}
.loginBtn {
  color: white;
  background-color: #ff0066;
  font-weight: 900;
  font-size: 14px;
  text-transform: uppercase;
  width: 164px;
  height: 60px;
  border-radius: 60px;
  border: none;
}
.ahref-login {
  color: white;
}

.inputAuthForms {
  display: block;
  font-size: 18px;
  font-family: sans-serif;
  font-weight: 300;
  color: #333;
  /* line-height: 1.3; */
  /* padding: 0.6em 1.4em 0.5em 0.8em; */
  width: 85vw;
  box-sizing: border-box;
  margin: 0;
  border: 1px solid 666666;
  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
  border-radius: 2em;
  background-color: #fff;
  border: none;
  padding: 21px;
  padding-left: 32px;
}
.inputAuthForms:focus {
  outline: 0;
}
/* END OF LOGIN FORM AND SOIGNUP FORM */

/* CLASS DETAIL STYLING-------------------------------------------------- */
/* --same as above but used in class detail <a> link-- */
.btn-container a {
  font-weight: 600;
  font-size: 14px;
  text-transform: uppercase;
  width: 164px;
  height: 60px;
  border-radius: 60px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
}
.ahref-btn-off {
  color: #333;
  background-color: #c4c4c4;
}
.ahref-btn-on {
  color: white;
  background-color: #ff0066;
}
.classcontainer {
  height: 100vh;
  background-color: #e5e5e5;
  color: #333333;
}
.class-content {
  margin: 16px;
}
.profile-hero {
  height: 34vh;
  width: 100vw;
  background: white;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}
.profile-hero img {
  height: 34vh;
  width: auto;
}
.pink-h2 {
  color: #ff0066;
  position: fixed;
  top: 16px;
  left: 16px;
}
.close-button {
  position: fixed;
  top: 16px;
  right: 16px;
}
/* HEADER STYLE ----------------------------------- */
.header {
  height: 90px;
  background-color: black;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #666666;
  position: fixed;
  top: 0;
  width: 100vw;
}
.profile-header {
  height: 200px;
  background-color: black;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #666666;
  position: fixed;
  top: 0;
  width: 100vw;
}
/* END of HEADER STYLE ----------------------------- */
/* NAV / FOOTER STYLING---------------------- */
nav {
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  text-align: center;
  font-variant: small-caps;
  background-color: black;
  width: 100vw;
  height: 60px;
  border-top: 1px solid #666666;
  width: 100vw;
  display: flex;
  justify-content: space-around;
  align-items: flex-end;
  position: fixed;
  bottom: 0px;
}

nav div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 10px;
}
nav img {
  margin: 1px;
}
/* END of NAV / FOOTER------------------------------ */
/* SCHEDULE STYLING----------------------------- */
#schedule-date {
  text-transform: uppercase;
  margin: 5px 16px;
}
.scroll-container {
  position: absolute;
  top: 90px;
  overflow-y: scroll;
  z-index: -1;
}
.class-card {
  background-color: #333;
  margin-bottom: 1px;
  height: 90px;
  width: 100vw;
  display: flex;
  align-items: center;
}
.class-card div {
  margin-left: 16px;
}
.profile-pic img {
  width: 72px;
  height: auto;
  background-color: white;
  clip-path: circle(36px at center);
}
.small-info {
  width: 50vw;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  text-transform: uppercase;
}
.flechita {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  margin-right: 32px;
}
.empty-class-card {
  background-color: #333;
  opacity: 50%;
  margin-bottom: 1px;
  height: 90px;
  width: 100vw;
}
/* --FILTER STYLING------------------------- */
#filter {
  background-color: white;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 100vh;
  z-index: 100;
}
#filter-title {
  margin: 20px 16px;
  color: #333;
}

.filterShow {
  background-color: black;
  color: #e5e5e5;
  display: flex;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  flex-wrap: wrap;
  flex-direction: column;
}
.filterHidden {
  display: none;
}
.input-container {
  width: 100vw;

  display: flex;
  justify-content: flex-end;
  margin-top: 50px;
}
.apply-filter {
  color: white;
  background-color: #ff0066;
  font-weight: 900;
  font-size: 14px;
  text-transform: uppercase;
  width: 164px;
  height: 60px;
  border-radius: 60px;
  border: none;
  margin-right: 16px;
}
.reset-filter {
  color: #ff0066;
  background-color: white;
  font-weight: 900;
  font-size: 14px;
  text-transform: uppercase;
  border: none;
  margin-right: 24px;
}
.reset-filter:focus {
  outline: 0;
}

form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.select-css {
  width: 92vw;
  height: 60px;
  border: none;
  border-radius: 30px;
  background-color: #e5e5e5;
  color: #333;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  padding-left: 24px;
  padding-right: 24px;
}

.select-css::-ms-expand {
  display: none;
}
.select-css:hover {
  border-color: #888;
}
.select-css:focus {
  outline: 0;
}

/* LIVE CLASS */
.iframe {
  width: 100vw;
  height: 100vh;
}

/* PROFILE STYLING------------------------------- */
.header-profile {
  height: 200px;
  background-color: black;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 0;
  width: 100vw;
}
.header-profile-top {
  height: 120px;
  background-color: black;
  display: flex;
  border-bottom: 1px solid #666666;
  width: 100vw;
}
.profile-pic-big {
  display: flex;
  justify-content: center;
  align-items: center;
  
}
.profile-pic-big img {
  width: 90px;
  height: auto;
  background-color: white;
  clip-path: circle(45px at center);
  margin: 16px;
}
.header-profile-top-right {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}
.header-profile-top-right h2 {
  line-height: 32px;
}
.header-profile-bottom {
  height: 80px;
  background-color: black;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  border-bottom: 1px solid #666666;
  width: 100vw;
}
.header-profile-bottom img {
  margin-right: 10px;
}
.profile-scroll-container {
  position: absolute;
  top: 200px;
  overflow-y: scroll;
  z-index: -1;
}
.profile-form {
  width: 100vw;
  display: flex;
  justify-content: left;
}
.label {
  font-weight: normal;
  font-size: 14px;
  line-height: 20px;
  text-transform: uppercase;
}

.profile-submit {
  font-weight: 600;
  font-size: 14px;
  text-transform: uppercase;
  width: 200px;
  height: 60px;
  border-radius: 60px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
  color: white;
  background-color: #ff0066;
}
.change-password {
  font-weight: 600;
  font-size: 14px;
  text-transform: uppercase;
  width: 200px;
  height: 60px;
  border-radius: 60px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
  color: #333333;
  background-color: #c4c4c4;
}

.profile-rectangle {
  border: 1px solid #666666;
  width: 80%;
  padding: 1px;
  display: block;
}

.profile-container {
  display: block;
  font-size: 18px;
  font-family: sans-serif;
  font-weight: 300;
  color: #C4C4C4;
  width: 85vw;
  box-sizing: border-box;
  padding: 21px;
  padding-left: 32px;
}

